[gd_scene load_steps=3 format=3 uid="uid://bdw2mhisk0u28"]

[ext_resource type="Texture2D" uid="uid://uwob0hsp16y4" path="res://Art/sicklerang.png" id="1_jajmr"]
[ext_resource type="Script" path="res://Player/sicklerang.gd" id="1_q77xk"]

[node name="sicklerang" type="RigidBody2D"]
collision_layer = 32
collision_mask = 0
gravity_scale = 0.0
angular_damp = 100.0
script = ExtResource("1_q77xk")

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
position = Vector2(14, -16)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_jajmr")

[node name="Area2D" type="Area2D" parent="Node2D"]
collision_layer = 0
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Area2D"]
position = Vector2(-1, -5.96046e-08)
scale = Vector2(0.975523, 3.1875)
polygon = PackedVector2Array(1.11111, 0, 1.11111, -10, 28.8889, -10, 29, 0)

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(1.5, 1.5)
polygon = PackedVector2Array(0, 0, 27, 0, 27, -32, 0, -32)

[node name="Lifetime" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
